--- a/index.html
+++ b/index.html
@@ -248,6 +248,19 @@ config = {
 
 </script>
 
+<script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
+<script>
+  async function runPython() {
+    let pyodide = await loadPyodide();
+    let result = pyodide.runPython(`
+        print("Hello from Python in the browser!")
+    `);
+    console.log(result);
+  }
+  runPython();
+</script>
+
+
     <title>screenshots</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -345,12 +358,8 @@ config = {
 
 </head>
 
+<body>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.4/brython.min.js"></script>
-<body onload="brython()">
-    <script type="text/python">
-        print("Hello from Python in the browser!")
-    </script>
 
     <div id="transfer" align=center>
 <!--        <div class="spinner" id='spinner'></div> -->
